test/regress/coverage-expr-context-str.test
; Coverage for expr.cc (context_to_str) and format.cc
; Triggered by calc_error during format expression evaluation

2024/01/15 Test
    Expenses:Food    $50.00
    Assets:Checking

; Test: unknown identifier triggers calc_error in format
; context_to_str() is called to display the expression context
test reg --format '%(nonexistent_var)\n' -> 1
__ERROR__
While calculating format expression:
  nonexistent_var
While evaluating value expression:
  nonexistent_var
  ^^^^^^^^^^^^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food    $50.00
Error: Unknown identifier 'nonexistent_var'
end test
